Create endpoint ant unit test
- use controllerAdvice